k8s-yaml/ingress-demo/deployment.yaml
# cat deployment.yaml 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1.0
  namespace: junyao
spec:
  selector:
    matchLabels:
      app: v1.0
  replicas: 3
  template:
    metadata:
      labels:
        app: v1.0
    spec:
      containers:
      - name: hello-v1
        image: anjia0532/google-samples.hello-app:1.0
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2.0
  namespace: junyao
spec:
  selector:
    matchLabels:
      app: v2.0
  replicas: 3
  template:
    metadata:
      labels:
        app: v2.0
    spec:
      containers:
      - name: hello-v2
        image: anjia0532/google-samples.hello-app:2.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-v1
  namespace: junyao
spec:
  selector:
    app: v1.0
  ports:
  - port: 8081
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service-v2
  namespace: junyao
spec:
  selector:
    app: v2.0
  ports:
  - port: 8081
    targetPort: 8080
    protocol: TCP
